--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -4,6 +4,10 @@
   margin: rem(24) clamp(rem(24), 5vw, rem(56));
 }
 
+body {
+  position: relative;
+}
+
 .header {
   margin-top: clamp(rem(26), 2vw + 1rem, rem(40));
   display: flex;
