--- a/src/sass/pages/_crew.scss
+++ b/src/sass/pages/_crew.scss
@@ -9,6 +9,11 @@ body[class="crew"] {
 
   @include breakpoint("tablet") {
     display: block;
+    background-image: url("../../assets/crew/background-crew-tablet.jpg");
+  }
+
+  @include breakpoint("mobile") {
+    background-image: url("../../assets/crew/background-crew-mobile.jpg");
   }
 
   .section-text {
