--- a/src/sass/pages/_technology.scss
+++ b/src/sass/pages/_technology.scss
@@ -3,6 +3,14 @@
 body[class="technology"] {
   background-image: url("../../assets/technology/background-technology-desktop.jpg");
 
+  @include breakpoint("tablet") {
+    background-image: url("../../assets/technology/background-technology-tablet.jpg");
+  }
+
+  @include breakpoint("mobile") {
+    background-image: url("../../assets/technology/background-technology-mobile.jpg");
+  }
+
   .technology-main {
     display: flex;
     align-items: center;
